<resources>
    <string name="app_name">Project_1</string>
    <string name="first_name">First Name</string>
    <string name="save">save</string>
    <string name="last_name">Last Name</string>
    <string name="studentid">studentId</string>
    <string name="enter_id">Enter ID</string>
    <string name="cancel">cancel</string>
    <string name="delete">Delete</string>
    <string name="update">update</string>
    <string name="first_name_hint">First Name</string>
    <string name="add_button">add button</string>
    <string name="First_Name">First Name:</string>
    <string name="Last_name">Last Name</string>
    <string name="search_title" />
    <string name="search_hint">search</string>
    <string name="search">search</string>
    <string name="search_btn">search button</string>
    <string name="sort">sort</string>
    <string name="retry">Retry</string>
    <string name="crud_operation_p1">CRUD OPERATION P1</string>
    <string name="new_student">New student</string>
</resources>